# AgentScopeLocal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  agentscope_traces.db  api.py  cli.py  pyproject.toml  requirements.txt  test_agent.py  test_multi_provider.py  test_rag_debugging.py  verify_database.py  verify_db.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
agentscope/: __init__.py  exporter.py  instrumentation.py  llm_client.py  model_detector.py  model_registry.py  performance_tracker.py  rag_logger.py  resource_monitor.py  streaming_tracker.py  utils.py
agentscope/core/: __init__.py  decorators.py  session.py
agentscope/integrations/: __init__.py  llm_wrapper.py
agentscope/ui/: __init__.py  terminal.py
examples/: README.md  package_mode_example.py  simple_rag_chat.py  test_web_open.py  ui_demo.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: ContextWindowBar.tsx  ForkModal.tsx  PerformanceMetrics.tsx  RagDebugPanel.tsx  ResourceUsage.tsx  SpanDetails.tsx  StreamingMetrics.tsx  Timeline.tsx  TraceList.tsx
frontend/src/utils/: transform.ts
migrations/: add_performance_metrics.py  add_streaming_support.py
tests/: conftest.py
tests/e2e/: test_complete_e2e_legacy.py
tests/integration/: test_rag_debugging_legacy.py  test_workflow.py
tests/unit/: test_decorators.py  test_session.py
