[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[project]
name = "agentscope-local"
version = "1.0.0"
description = "Universal AI debugging flight recorder with RAG and Time Travel support"
readme = "README.md"
authors = [{name = "AgentScope Contributors"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debugging",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["llm", "debugging", "telemetry", "opentelemetry", "rag", "ai", "agents"]
requires-python = ">=3.8"
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
agentscope = "cli:app"

[project.urls]
Homepage = "https://github.com/yagna-1/AgentScopeLocal"
Repository = "https://github.com/yagna-1/AgentScopeLocal"
Documentation = "https://github.com/yagna-1/AgentScopeLocal#readme"
"Bug Tracker" = "https://github.com/yagna-1/AgentScopeLocal/issues"

[tool.setuptools]
packages = ["agentscope"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["frontend/dist/**/*"]
